--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,44 @@
-
+*{
+    box-sizing: border-box;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.container{
+    border: 3px #000 solid;
+    padding: 35px;
+    border-radius: 14px;
+    max-width: 1000px;
+    text-align: center;
+}
+.container2{
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0;
+}
+.otp{
+    border-radius: 10px;
+    font-size: 75px;
+    height: 8rem;
+    width: 6rem;
+    border: 1px solid #eee;
+    margin : 5px 5px 5px 5px;
+    text-align: center;
+    font-weight: 300;
+}
+.info{
+    background-color: #eaeaea;
+    padding: 1rem;
+    border-radius: 8px;
+}
+/*to remove spin burron from number input*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
